change pretty url

--- a/public/index.html
+++ b/public/index.html
@@ -2,9 +2,9 @@
 <html>
 <head>
     <title>Redirecting...</title>
-    <meta http-equiv="refresh" content="0;url=/login.html">
+    <meta http-equiv="refresh" content="0;url=/login">
 </head>
 <body>
-    <p>Jika Anda tidak diarahkan secara otomatis, silakan klik <a href="/login.html">link ini</a>.</p>
+    <p>Jika Anda tidak diarahkan secara otomatis, silakan klik <a href="/login">link ini</a>.</p>
 </body>
 </html>
