--- a/public/device-1.html
+++ b/public/device-1.html
@@ -44,10 +44,10 @@
         </div>
         <ul class="nav flex-column mb-4 px-2">
             <li class="nav-item">
-            <a class="nav-link device-link" href="device-1.html">📟 Device 1</a>
+            <a class="nav-link device-link" href="/device-1">📟 Device 1</a>
             </li>
             <li class="nav-item">
-            <a class="nav-link device-link" href="device-2.html">📟 Device 2</a>
+            <a class="nav-link device-link" href="/device-2">📟 Device 2</a>
             </li>
         </ul>
         <div class="mt-auto text-center p-3">
